--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 __pycache__/
 local_settings.py
 *.migrations/*
+users/migrations*
+pets/migrations*
+users/__pycache__/
+config/__pycache__/
+pets/__pycache__/
